Kubernetes/kustomize/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    spec:
      containers:
      - name: application
        image: app
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
